# geometric-acr

./: BinaryConstraintVisitor.cpp  BinaryConstraintVisitor.h  BoundaryFeatures.cpp  BoundaryFeatures.h  BoundaryFeatures_fwd.h  CMakeLists.txt  Circle.cpp  Circle.h  Cone.h  Constraint.cpp  Constraint.h  ConstraintSet.cpp  ConstraintSet.h  Cylinder.h  CylindricalConstraint.cpp  CylindricalConstraint.h  GeometricConstraint.cpp  GeometricConstraint.h  GeometricConstraint_fwd.h  Plane.h  RecognizeConstraints.cpp  RecognizeConstraints.h  Sphere.cpp  Sphere.h  clean_cpp_h_files.sh  testapp.cpp
boundary_features/: CMakeLists.txt  Cone.cpp  Cone.h  Cylinder.cpp  GeometricConstraint.cpp  GeometricConstraint.h  Plane.cpp  RecognizeConstraints.cpp  RecognizeConstraints.h
boundary_features/detail/: BinaryConstraintVisitor.h  ConstraintFromFeaturePair.h
boundary_features/detail/RecognizedPairs/: ConeCone.h  PlanePlane.h  SphereCylinder.h  SphereSphere.h
detail/: BinaryConstraintVisitor.h  ConstraintFromFeaturePair.h  ConstraintFromFeaturePair_fwd.h  IsRecognized.h  accumulateConstraint.h
detail/RecognizedPairs/: CircleCylinder.h  CylinderCylinder.h  PlanePlane.h
tests/: CMakeLists.txt  test_boundary_features.cpp  timing.cpp
timing/: CMakeLists.txt  DataRowOutputter.cpp  DataRowOutputter.h  RecognizeLimitedConstraints.cpp.cmake_in  RecognizeLimitedConstraints.h  generate_cmake_in.lua  main.cpp  run-all.sh
